@@ -7,8 +7,7 @@ libgstmpeg2enc_la_SOURCES = \
 	gstmpeg2encstreamwriter.cc \
 	gstmpeg2encpicturereader.cc
 libgstmpeg2enc_la_CXXFLAGS = $(MPEG2ENC_CFLAGS) $(GST_CFLAGS)
-libgstmpeg2enc_la_LIBADD = $(MPEG2ENC_LIBS)
-libgstmpeg2enc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstmpeg2enc_la_LIBADD = $(MPEG2ENC_LIBS) $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = \
 	gstmpeg2enc.hh \
